fix: add behavior when the page behind the open menu does not scroll

--- a/christmas-shop/styles/styles.css
+++ b/christmas-shop/styles/styles.css
@@ -1124,6 +1124,9 @@ a {
         width: 100vw;
         transition: left 0.3s ease-in-out, width 0.3s ease-in-out;
     }
+    #top:has(#burger__checkbox:checked) {
+        position: fixed;
+    }
 }
 
 @media screen and (width < 768px) {
